--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobenton",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Lobenton! Easy to create a web application.",
   "license": "MIT",
   "repository": {
@@ -34,6 +34,7 @@
     "watch"
   ],
   "dependencies": {
+    "acorn": "^3.3.0",
     "async": "^1.5.2",
     "async-fetch-helper": "^2.8.3",
     "babel": "^6.5.2",
@@ -42,6 +43,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-rewire": "^1.0.0-rc-6",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.1",
     "babel-preset-es2015-loose": "^7.0.0",
@@ -51,12 +53,17 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
+    "classnames": "^2.2.5",
+    "csscomb": "^3.1.8",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "css-modules-require-hook": "^4.0.2",
     "debug": "^0.7.4",
     "deep-assign": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "jquery": "^2.2.1",
+    "jquery-ui": "^1.10.5",
     "get-parameter-names": "^0.3.0",
     "i18next": "^3.4.1",
     "is": "^3.1.0",
@@ -75,6 +82,7 @@
     "react": "^15.3.1",
     "react-css-modules": "^3.7.9",
     "react-dom": "^15.3.1",
+    "react-ga": "^1.4.0",
     "react-i18next": "^1.8.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
@@ -89,8 +97,10 @@
     "soap": "^0.16.0",
     "style-loader": "^0.13.1",
     "superagent": "^2.2.0",
+    "sync-request": "^3.0.1",
     "unirest": "^0.5.1",
     "url": "^0.11.0",
+    "validator": "^5.3.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2",
