--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "lobenton",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "description": "Lobenton! Easy to create a web application.",
   "license": "MIT",
+  "author": "Rex Chen <rexhome7326@gmail.com>",
+  "contributors": [],
   "repository": {
     "type": "git",
     "url": "https://github.com/rexhome7326/lobenton"
@@ -12,7 +14,11 @@
   "scripts": {
     "build": "babel src --out-dir lib --copy-files"
   },
+  "bin": {
+    "lobenton": "./bin/lobenton.js"
+  },
   "files": [
+    "bin",
     "lib",
     "client.js",
     "webpack.dev.config.js",
