--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobenton",
-  "version": "0.11.2",
+  "version": "0.11.3",
   "description": "Lobenton! Easy to create a web application.",
   "license": "MIT",
   "author": "Rex Chen <rexhome7326@gmail.com>",
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/rexhome7326/lobenton"
   },
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "port": "3000",
   "scripts": {
     "build": "babel src --out-dir lib --copy-files"
@@ -20,6 +20,7 @@
   "files": [
     "bin",
     "lib",
+    "src",
     "client.js",
     "webpack.dev.config.js",
     "webpack.prod.config.js"
