--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobenton",
-  "version": "0.26.3",
+  "version": "0.26.4",
   "description": "Lobenton! Easy to create a web application.",
   "license": "MIT",
   "author": "Rex Chen <rexhome7326@gmail.com>",
@@ -51,6 +51,7 @@
     "babel-plugin-rewire": "^1.0.0-rc-6",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-replace-import-src-to-where": "^0.0.5",
+    "babel-plugin-annotation-to-prop": "^0.1.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.1",
     "babel-preset-es2015-loose": "^7.0.0",
