--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobenton",
-  "version": "0.28.2",
+  "version": "0.29.0",
   "description": "Lobenton! Easy to create a web application.",
   "license": "MIT",
   "author": "Rex Chen <rexhome7326@gmail.com>",
@@ -49,7 +49,9 @@
     "babel-helper-error-stack": "^1.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-replace-config-vars": "^2.0.1",
     "babel-plugin-rewire": "^1.0.0-rc-6",
+    "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-replace-import-src-to-where": "^1.0.0",
     "babel-plugin-annotation-to-prop": "^1.0.1",
@@ -57,6 +59,9 @@
     "babel-preset-es2015": "^6.13.1",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
+    "babel-preset-stage-2": "^6.13.0",
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
@@ -74,10 +79,11 @@
     "jquery": "^2.2.1",
     "jquery-ui": "^1.10.5",
     "get-parameter-names": "^0.3.0",
+    "happypack": "^2.2.1",
     "i18next": "^3.4.1",
     "is": "^3.1.0",
     "js-base64": "^2.1.9",
-    "lodash": "^3.10.1",
+    "lodash": "^4.16.4",
     "log4js": "^0.6.38",
     "mobile-detect": "^1.3.3",
     "node-watch": "^0.4.0",
@@ -116,5 +122,9 @@
     "webpack-hot-middleware": "^2.12.2",
     "webpack-sources": "^0.1.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.1.2",
+    "should": "^11.1.1"}
 }
