--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobenton",
-  "version": "0.30.1",
+  "version": "0.30.2",
   "description": "Lobenton! Easy to create a web application.",
   "license": "MIT",
   "author": "Rex Chen <rexhome7326@gmail.com>",
@@ -44,7 +44,7 @@
   "dependencies": {
     "acorn": "^3.3.0",
     "async": "^1.5.2",
-    "async-fetch-helper": "^2.8.6",
+    "async-fetch-helper": "^2.8.7",
     "babel-cli": "^6.11.4",
     "babel-helper-error-stack": "^1.0.0",
     "babel-loader": "^6.2.5",
@@ -96,6 +96,7 @@
     "postcss-modules-values": "^1.2.2",
     "qs": "^6.2.1",
     "react": "^15.3.1",
+    "react-addons-update": "^15.3.2",
     "react-css-modules": "^3.7.9",
     "react-dom": "^15.3.1",
     "react-ga": "^1.4.0",
