--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobenton",
-  "version": "0.30.6",
+  "version": "0.30.7",
   "description": "Lobenton! Easy to create a web application.",
   "license": "MIT",
   "author": "Rex Chen <rexhome7326@gmail.com>",
@@ -45,87 +45,88 @@
     "acorn": "^3.3.0",
     "async": "^1.5.2",
     "async-fetch-helper": "^2.8.7",
-    "babel-cli": "^6.11.4",
+    "babel-cli": "^6.18.0",
     "babel-helper-error-stack": "^1.0.0",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-annotation-to-prop": "^1.0.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-replace-config-vars": "^2.0.1",
-    "babel-plugin-rewire": "^1.0.0-rc-6",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-replace-import-src-to-where": "^1.0.0",
-    "babel-plugin-annotation-to-prop": "^1.0.1",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.1",
+    "babel-plugin-rewire": "^1.0.0",
+    "babel-plugin-transform-class-properties": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-1": "^6.13.0",
-    "babel-preset-stage-2": "^6.13.0",
-    "babel-runtime": "^6.11.6",
-    "bluebird": "^3.4.1",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-runtime": "^6.18.0",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
-    "classnames": "^2.2.5",
-    "csscomb": "^3.1.8",
-    "cross-env": "^2.0.0",
+    "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
-    "css-modules-require-hook": "^4.0.2",
+    "css-modules-require-hook": "^4.0.5",
+    "csscomb": "^3.1.8",
     "debug": "^0.7.4",
     "deep-assign": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "jquery": "^2.2.1",
-    "jquery-ui": "^1.10.5",
     "get-parameter-names": "^0.3.0",
     "happypack": "^2.2.1",
-    "i18next": "^3.4.1",
-    "is": "^3.1.0",
+    "i18next": "^3.5.1",
+    "is": "^3.2.0",
+    "jquery": "^2.2.4",
+    "jquery-ui": "^1.12.1",
     "js-base64": "^2.1.9",
-    "lodash": "^4.16.4",
+    "lodash": "^4.16.6",
     "log4js": "^0.6.38",
     "mobile-detect": "^1.3.3",
-    "node-watch": "^0.4.0",
+    "node-watch": "^0.4.1",
     "parseurl": "^1.3.1",
-    "postcss": "^5.0.21",
+    "postcss": "^5.2.5",
     "postcss-loader": "^0.13.0",
     "postcss-modules-extract-imports": "^1.0.1",
     "postcss-modules-local-by-default": "^1.0.1",
     "postcss-modules-scope": "^1.0.1",
     "postcss-modules-values": "^1.2.2",
-    "qs": "^6.2.1",
-    "react": "^15.3.1",
+    "qs": "^6.3.0",
+    "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
     "react-css-modules": "^3.7.9",
-    "react-dom": "^15.3.1",
-    "react-ga": "^1.4.0",
-    "react-i18next": "^1.8.0",
+    "react-dom": "^15.3.2",
+    "react-ga": "^1.5.0",
+    "react-i18next": "^1.10.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
+    "react-router": "^2.8.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "rewire-webpack": "^1.0.1",
-    "saml2-js": "^1.8.0",
+    "saml2-js": "^1.10.0",
     "serve-static": "^1.11.1",
     "soap": "^0.16.0",
     "style-loader": "^0.13.1",
-    "superagent": "^2.2.0",
+    "superagent": "^2.3.0",
     "sync-request": "^3.0.1",
     "unirest": "^0.5.1",
     "url": "^0.11.0",
-    "validator": "^5.3.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
+    "validator": "^5.7.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.1",
     "webpack-sources": "^0.1.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "mocha": "^3.1.2",
-    "should": "^11.1.1"}
+    "should": "^11.1.1"
+  }
 }
