--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
     "js-base64": "^2.1.9",
+    "json-loader": "^0.5.4",
     "lodash": "^4.17.2",
     "log4js": "^0.6.38",
     "mobile-detect": "^1.3.5",
